Fixed alignment of top-level bin rows.

--- a/ui/styles/components/bin.less
+++ b/ui/styles/components/bin.less
@@ -19,7 +19,9 @@
         }
     }
 
-    > .folder, > .item {
-        padding-left: 0;
+    > .contents {
+        > .folder, > .item {
+            padding-left: 0;
+        }
     }
 }
